--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <title>1차 개인 포트폴리오</title>
+    <title>1차 개인 포트폴리오 닥터자르트</title>
 </head>
 
 <body>
