포트폴리오1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <title>1차 개인 포트폴리오 닥터자르트</title>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
+    <script src="js/main.js"></script>
+    <title>1차 개인 포트폴리오</title>
 </head>
 
 <body>
@@ -63,14 +66,14 @@
         <div class="inbox" id="intro">
             <h2 class="intro_tit">
                 <ul class="let">
-                    <li><img src="images/intro/logo_01.png" alt="로고글자"></li>
-                    <li><img src="images/intro/logo_02.png" alt="로고글자"></li>
+                    <li class="mtxt"><img src="images/intro/logo_01.png" alt="로고글자"></li>
+                    <li class="mtxt"><img src="images/intro/logo_02.png" alt="로고글자"></li>
                     <li class="plus"></li>
-                    <li><img src="images/intro/logo_04.png" alt="로고글자"></li>
+                    <li class="mtxt"><img src="images/intro/logo_04.png" alt="로고글자"></li>
                     <li class="plus"></li>
-                    <li><img src="images/intro/logo_05.png" alt="로고글자"></li>
-                    <li><img src="images/intro/logo_06.png" alt="로고글자"></li>
-                    <li><img src="images/intro/logo_07.png" alt="로고글자"></li>
+                    <li class="mtxt"><img src="images/intro/logo_05.png" alt="로고글자"></li>
+                    <li class="mtxt"><img src="images/intro/logo_06.png" alt="로고글자"></li>
+                    <li class="mtxt"><img src="images/intro/logo_07.png" alt="로고글자"></li>
                 </ul>
             </h2>
 
@@ -148,71 +151,80 @@
                 <ul class="best_list">
                     <!--베스트셀러 텍스트영역-->
                     <li class="best_1">
-
-                        <div class="best_txt">
-                            <div class="best_txt1">
-                                #탱글수분크림
+                        <a href="#">
+                            <div class="best_txt">
+                                <div class="best_txt1">
+                                    #탱글수분크림
+                                </div>
+                                <div class="best_txt2">
+                                    바이탈 하이드라 솔루션 바이옴 워터 크림
+                                </div>
+                                <div class="best_txt3">
+                                    38,000원
+                                </div>
                             </div>
-                            <div class="best_txt2">
-                                바이탈 하이드라 솔루션 바이옴 워터 크림
-                            </div>
-                            <div class="best_txt3">
-                                38,000원
-                            </div>
-                        </div>
+                        </a>
                     </li>
-
                     <li class="best_2">
-                        <div class="best_txt">
-                            <div class="best_txt1">
-                                #233억에센스+톤업샷
+                        <a href="#">
+                            <div class="best_txt">
+                                <div class="best_txt1">
+                                    #233억에센스+톤업샷
+                                </div>
+                                <div class="best_txt2">
+                                    바이옴 에센스&블루 샷
+                                </div>
+                                <div class="best_txt3">
+                                    <span>42,000원</span>35,700원
+                                </div>
                             </div>
-                            <div class="best_txt2">
-                                바이옴 에센스&블루 샷
-                            </div>
-                            <div class="best_txt3">
-                                <span>42,000원</span>35,700원
-                            </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="best_3">
-                        <div class="best_txt">
-                            <div class="best_txt1">
-                                #수분선앰플
+                        <a href="#">
+                            <div class="best_txt">
+                                <div class="best_txt1">
+                                    #수분선앰플
+                                </div>
+                                <div class="best_txt2">
+                                    솔라바이옴™앰플 특별 기획세트
+                                </div>
+                                <div class="best_txt3">
+                                    <span>39,000원</span>35,100원
+                                </div>
                             </div>
-                            <div class="best_txt2">
-                                솔라바이옴™앰플 특별 기획세트
-                            </div>
-                            <div class="best_txt3">
-                                <span>39,000원</span>35,100원
-                            </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="best_4">
-                        <div class="best_txt">
-                            <div class="best_txt1">
-                                #프라이머선크림
+                        <a href="#">
+                            <div class="best_txt">
+                                <div class="best_txt1">
+                                    #프라이머선크림
+                                </div>
+                                <div class="best_txt2">
+                                    솔라바이옴™프라이머 특별기획세트
+                                </div>
+                                <div class="best_txt3">
+                                    <span>29,000원</span>26,100원
+                                </div>
                             </div>
-                            <div class="best_txt2">
-                                솔라바이옴™프라이머 특별기획세트
-                            </div>
-                            <div class="best_txt3">
-                                <span>29,000원</span>26,100원
-                            </div>
-                        </div>
+                        </a>
                     </li>
                     <li class="best_5">
-                        <div class="best_txt">
-                            <div class="best_txt1">
-                                #똑똑클렌저
+                        <a href="#">
+                            <div class="best_txt">
+                                <div class="best_txt1">
+                                    #똑똑클렌저
+                                </div>
+                                <div class="best_txt2">
+                                    바이옴 클렌저
+                                </div>
+                                <div class="best_txt3">
+                                    32,000원
+                                </div>
                             </div>
-                            <div class="best_txt2">
-                                바이옴 클렌저
-                            </div>
-                            <div class="best_txt3">
-                                32,000원
-                            </div>
-                        </div>
+                        </a>
+
                     </li>
                 </ul>
             </div>
@@ -220,9 +232,9 @@
             <aside class="best_btn">
                 <ol>
                     <!--왼쪽이동버튼-->
-                    <li><a href="#"><img src="images/best_icon_left.png" alt="베스트셀러왼쪽이동"></a></li>
+                    <li><a href="#" class="lb"><img src="images/best_icon_left.png" alt="베스트셀러왼쪽이동"></a></li>
                     <!--오른쪽이동버튼-->
-                    <li><a href="#"><img src="images/best_icon_right.png" alt="베스크셀러오른쪽이동"></a></li>
+                    <li><a href="#" class="rb"><img src="images/best_icon_right.png" alt="베스트셀러오른쪽이동"></a></li>
                 </ol>
             </aside>
         </div>
@@ -333,6 +345,7 @@
                     <li class="col-12">
                         <img src="images/instar_icon.png" alt="인스타그램">
                         <div class="insbox">
+
                             <ul class="instar_ul">
                                 <li class="instar_1"><a href="#"><span class="ir">리스트이미지</span></a></li>
                                 <li class="instar_2"><a href="#"><span class="ir">리스트이미지</span></a></li>
@@ -345,6 +358,7 @@
                                 <li class="instar_4"><a href="#"><span class="ir">리스트이미지</span></a></li>
                                 <li class="instar_5"><a href="#"><span class="ir">리스트이미지</span></a></li>
                             </ul>
+
                         </div>
                     </li>
                     <div class="sns_bar"></div>
@@ -369,23 +383,21 @@
                 </div>
             </ul>
             <!--인스타 블릿버튼-->
-            <aside class="link_btn instar">
-                <ol>
+            <aside class="link_btn instar">          
                     <!--왼쪽이동버튼-->
-                    <li><a href="#"><img src="images/best_icon_left.png" alt="베스트셀러왼쪽이동"></a></li>
+                    <a href="#" class="ins_lb"><img src="images/best_icon_left.png" alt="인스타왼쪽이동"></a>
                     <!--오른쪽이동버튼-->
-                    <li><a href="#"><img src="images/best_icon_right.png" alt="베스크셀러오른쪽이동"></a></li>
-                </ol>
+                    <a href="#" class="ins_rb"><img src="images/best_icon_right.png" alt="인스타오른쪽이동"></a>
             </aside>
             <!--유튜브 블릿버튼-->
-            <aside class="link_btn youtb">
-                <ol>
+            <!--<aside class="link_btn youtb">-->
+                <!--<ol>-->
                     <!--왼쪽이동버튼-->
-                    <li><a href="#"><img src="images/best_icon_left.png" alt="베스트셀러왼쪽이동"></a></li>
+                    <!--<li><a href="#" class="you_lb"><img src="images/best_icon_left.png" alt="유튜브왼쪽이동"></a></li>-->
                     <!--오른쪽이동버튼-->
-                    <li><a href="#"><img src="images/best_icon_right.png" alt="베스크셀러오른쪽이동"></a></li>
-                </ol>
-            </aside>
+                    <!--<li><a href="#" class="you_rb"><img src="images/best_icon_right.png" alt="유튜브오른쪽이동"></a></li>-->
+                <!--</ol>-->
+            <!--</aside>-->
         </div>
     </div>
     <div class="page info">
@@ -393,15 +405,16 @@
             <ul class="fbx">
                 <li class="col-12 ih1">
                     <div class="foot_1">
-                        <a href="#">회사소개</a><span></span>
-                        <a href="#">이용약관</a><span></span>
-                        <a href="#">개인정보처리방침</a><span></span>
-                        <a href="#">이메일주소 무단 수집거부</a><span></span>
+                        <a href="#">회사소개</a>
+                        <a href="#">이용약관</a>
+                        <a href="#">개인정보처리방침</a>
+                        <a href="#">이메일주소 무단 수집거부</a>
                         <a href="#">고객만족센터</a>
                     </div>
-                    
+
                     <div class="select_box">
-                        <select>
+                       <label class="sm1" for="sm1">하하</label>
+                        <select id="sm1">
                             <option>Family Site</option>
                             <option>DTRT</option>
                             <option>Dr.jart US</option>
@@ -413,20 +426,21 @@
                         </select>
                     </div>
                 </li>
-                <li class="col-12 ih2">
-                    <p class="foot_2">
-                        서울특별시 강남구 역삼동 769-8 엠스페이스빌딩, 도로명 주소 ( 서울특별시 강남구 논현로72길 13 M-SPACE 빌딩 해브앤비 ) 대표이사 : 크리스토퍼 킨더슬리 우드<br>
-
-                        상호명 : 해브앤비(주) 사업자 등록번호 : 214-87-63681 통신판매업 신고번호 : 2008 서울 강남-2284호 <a href="#">사업자 정보 확인</a><br>
-
-                        개인정보관리책임자 : 엄정식 팀장 고객만족센터 : 1544-5453 ( 운영시간 : 09:00~18:00, 점심시간 : 12:50~14:00 ) FAX : 02-3462-9051<br>
-
-                        전자우편주소 : webmaster@drjart.com<br><br>
-
-                        Copyrightⓒ Have&Be co., Ltd. All rights reserved
-                    </p>
-                </li>
             </ul>
+        </div>
+        <div class="col-12 ih2">
+            <p class="foot_2 inbox">
+                서울특별시 강남구 역삼동 769-8 엠스페이스빌딩, 도로명 주소 ( 서울특별시 강남구 논현로72길 13 M-SPACE 빌딩 해브앤비 ) 대표이사 : 크리스토퍼 킨더슬리 우드<br>
+
+                상호명 : 해브앤비(주) 사업자 등록번호 : 214-87-63681 통신판매업 신고번호 : 2008 서울 강남-2284호 <a href="#">사업자 정보 확인</a><br>
+
+                개인정보관리책임자 : 엄정식 팀장 고객만족센터 : 1544-5453 ( 운영시간 : 09:00~18:00, 점심시간 : 12:50~14:00 ) FAX : 02-3462-9051<br>
+
+                전자우편주소 : webmaster@drjart.com<br><br>
+
+                Copyrightⓒ Have&Be co., Ltd. All rights reserved
+            </p>
+
         </div>
     </div>
 
